--- a/service-monitor.yaml
+++ b/service-monitor.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   labels:
-    app: flink-taskmanager
+    app: flink-servicemonitor
     prometheus: mon-app
   name: flink-taskmanager
   namespace: intelligence
@@ -16,4 +16,3 @@ spec:
   selector:
     matchLabels:
       app: flink
-      component: taskmanager
